--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "dev": "tsx watch src/server.ts"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "keywords": [],
   "author": "Luiz Oliveira <luiiz.silverio@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.8.1",
-    "fastify": "^4.11.0"
+    "dayjs": "^1.11.7",
+    "fastify": "^4.11.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "prisma": "^4.8.1",
